--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Status</title>
 </head>
 <body>
-    <h1>Status: <span id="status">DOWN</span></h1>
+    <h1>Status: <span id="status">UP</span></h1>
 </body>
 </html>
